--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title></title>
+	<title>Updating title for stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -14,7 +14,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Adding more content here.
 		</p>
 	</main>
 	<footer class="container">
